--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "pixel-swipe",
-  "version": "0.1.1",
+  "name": "pixel-swiper",
+  "version": "0.1.2",
   "main": "dist/index.js",
   "repository": {
     "type": "git",
