--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pixel-swiper",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "main": "dist/index.js",
   "repository": {
     "type": "git",
@@ -33,8 +33,7 @@
     "webpack": "^3.5.6",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.19.1",
-    "webpack-merge": "^4.1.0",
-    "worker-loader": "^1.1.0"
+    "webpack-merge": "^4.1.0"
   },
   "dependencies": {},
   "description": "canvas",
